--- a/arch/arm/configs/tegra_harmony_gnu_linux_defconfig
+++ b/arch/arm/configs/tegra_harmony_gnu_linux_defconfig
@@ -46,6 +46,7 @@ CONFIG_MACH_VENTANA=y
 CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_EMC_SCALING_ENABLE=y
 CONFIG_TEGRA_MC_PROFILE=y
+CONFIG_USB_HOTPLUG=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_ARM_ERRATA_751472=y
 CONFIG_ARM_ERRATA_752520=y
