--- a/arch/arm/configs/tegra_cardhu_gnu_linux_defconfig
+++ b/arch/arm/configs/tegra_cardhu_gnu_linux_defconfig
@@ -95,7 +95,7 @@ CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
 CONFIG_DUMMY=y
-# CONFIG_NETDEV_1000 is not set
+CONFIG_R8168=y
 # CONFIG_NETDEV_10000 is not set
 CONFIG_BCM4329=m
 CONFIG_BCM4329_FW_PATH="/lib/firmware/bcm4329/fw_bcm4329.bin"
