net: add support for rtl8168 (and related device) gigabit ethernet
The code is based on source from Realtek Web-site. Source version: 8.025.00

Change-Id: I0ed32e516e1bd4bedfcdbd7fa23c94790d123916
Signed-off-by: Mursalin Akon <makon@nvidia.com>
Reviewed-on: http://git-master/r/52069
Reviewed-by: Allen Martin <amartin@nvidia.com>

--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -10,6 +10,7 @@ obj-$(CONFIG_TI_DAVINCI_EMAC) += davinci_emac.o
 
 obj-$(CONFIG_E1000) += e1000/
 obj-$(CONFIG_E1000E) += e1000e/
+obj-$(CONFIG_R8168) += r8168/
 obj-$(CONFIG_IBM_NEW_EMAC) += ibm_newemac/
 obj-$(CONFIG_IGB) += igb/
 obj-$(CONFIG_IGBVF) += igbvf/
