--- a/arch/arm/configs/tegra_cardhu_android_defconfig
+++ b/arch/arm/configs/tegra_cardhu_android_defconfig
@@ -212,6 +212,7 @@ CONFIG_PPP_MPPE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 # CONFIG_INPUT_MOUSEDEV is not set
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
 # CONFIG_KEYBOARD_ATKBD is not set
@@ -290,6 +291,7 @@ CONFIG_SND_HDA_TEGRA=y
 CONFIG_SND_HDA_POWER_SAVE=y
 CONFIG_SND_HDA_POWER_SAVE_DEFAULT=10
 CONFIG_SND_SOC_WM8903=y
+CONFIG_HID_SONY=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICEFS=y
 CONFIG_USB_SUSPEND=y
