arm: enterprise: config: enable NFC configuration
Enable NFC and interface driver configuration variables

Bug 846684
Bug 873017

Change-Id: I27c2ae451a1aa141a5c0061f80d2f953380c93d4
Reviewed-on: http://git-master/r/52568
Reviewed-by: Simone Willett <swillett@nvidia.com>
Tested-by: Simone Willett <swillett@nvidia.com>

--- a/arch/arm/configs/tegra_enterprise_android_defconfig
+++ b/arch/arm/configs/tegra_enterprise_android_defconfig
@@ -243,9 +243,9 @@ CONFIG_PDA_POWER=y
 CONFIG_BATTERY_BQ27x00=y
 CONFIG_CHARGER_TPS8003X=y
 CONFIG_BATTERY_GAUGE_TPS8003X=y
-CONFIG_GPADC_TPS80031=y
 CONFIG_SENSORS_TEGRA_TSENSOR=y
 CONFIG_MFD_TPS80031=y
+CONFIG_GPADC_TPS80031=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
@@ -258,7 +258,6 @@ CONFIG_VIDEO_AR0832=y
 CONFIG_TORCH_TPS61050=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
-CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -323,6 +322,8 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_IIO=y
 CONFIG_ISL29028=y
+CONFIG_NFC_DEVICES=y
+CONFIG_PN544_NFC=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
