--- a/arch/arm/configs/tegra_defconfig
+++ b/arch/arm/configs/tegra_defconfig
@@ -229,6 +229,7 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_MOUSE_GPIO=m
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
 CONFIG_SERIO_SERPORT=m
