--- a/arch/arm/configs/tegra_cardhu_android_defconfig
+++ b/arch/arm/configs/tegra_cardhu_android_defconfig
@@ -248,11 +248,13 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_BATTERY_BQ27x00=y
 CONFIG_SENSORS_TEGRA_TSENSOR=y
 CONFIG_SENSORS_INA219=y
+CONFIG_MFD_MAX77663=y
 CONFIG_MFD_TPS6591X=y
 CONFIG_MFD_RICOH583=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
+CONFIG_REGULATOR_MAX77663=y
 CONFIG_REGULATOR_TPS6591X=y
 CONFIG_REGULATOR_TPS6236X=y
 CONFIG_REGULATOR_RICOH583=y
@@ -320,6 +322,7 @@ CONFIG_MMC_TEGRA_TAP_DELAY=y
 CONFIG_MMC_SDHCI_TEGRA=y
 CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_MAX77663=y
 CONFIG_RTC_DRV_TPS6591x=y
 CONFIG_STAGING=y
 # CONFIG_STAGING_EXCLUDE_BUILD is not set
