--- a/arch/arm/configs/tegra_cardhu_mods_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_defconfig
@@ -27,6 +27,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_ARCH_TEGRA=y
 CONFIG_ARCH_TEGRA_3x_SOC=y
+CONFIG_TEGRA_PCI=y
 CONFIG_MACH_CARDHU=y
 CONFIG_TEGRA_PWM=y
 # CONFIG_TEGRA_CPU_DVFS is not set
@@ -87,7 +88,6 @@ CONFIG_REGULATOR_TPS6591X=y
 CONFIG_REGULATOR_GPIO_SWITCH=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
-CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
