--- a/arch/arm/configs/tegra_cardhu_mods_ldk_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_ldk_defconfig
@@ -27,6 +27,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_ARCH_TEGRA=y
 CONFIG_ARCH_TEGRA_3x_SOC=y
+CONFIG_TEGRA_PCI=y
 CONFIG_MACH_CARDHU=y
 CONFIG_TEGRA_PWM=y
 # CONFIG_TEGRA_CPU_DVFS is not set
@@ -110,7 +111,6 @@ CONFIG_VIDEO_DEV=y
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
-CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES=y
