arm: tegra: power: add TEGRA_THERMAL_SYSFS option
Added option to enable the use of the Linux Thermal
Sysfs infrastructure within the tegra thermal
framework.

Change-Id: Ibaffecfda0fa1eee0d892e3b85e980bebeda1cc8
Reviewed-on: http://git-master/r/55837
Reviewed-by: Joshua Primero <jprimero@nvidia.com>
Tested-by: Joshua Primero <jprimero@nvidia.com>
Reviewed-by: Diwakar Tundlam <dtundlam@nvidia.com>

--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -338,3 +338,7 @@ config TEGRA_BB_XMM_POWER2
 	  insert this LKM to initiate 2nd USB enumeration power sequence
 	  - after modem software has been downloaded to flashless device.
 
+config TEGRA_THERMAL_SYSFS
+	bool "Enable Thermal driver to use Thermal Sysfs infrastructure"
+	depends on THERMAL
+	default n
