--- a/arch/arm/configs/tegra_whistler_android_defconfig
+++ b/arch/arm/configs/tegra_whistler_android_defconfig
@@ -30,6 +30,7 @@ CONFIG_TEGRA_DEBUG_UARTA=y
 CONFIG_TEGRA_SPI_SLAVE=y
 CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_EMC_SCALING_ENABLE=y
+CONFIG_TEGRA_MC_PROFILE=y
 CONFIG_TEGRA_STAT_MON=y
 CONFIG_ARM_ERRATA_720789=y
 CONFIG_NO_HZ=y
