--- a/arch/arm/configs/tegra_cardhu_mods_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_defconfig
@@ -85,6 +85,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
 CONFIG_REGULATOR_TPS6591X=y
+CONFIG_REGULATOR_TPS6236X=y
 CONFIG_REGULATOR_GPIO_SWITCH=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
