ARM: tegra3: config: Add USB hotplug support
Enable USB hotplug support

Bug 885272

Change-Id: I935994aba002d52e6e7970b54e9370cda0316cdf
Signed-off-by: Mursalin Akon <makon@nvidia.com>
Reviewed-on: http://git-master/r/56783
Reviewed-by: Jong Kim <jongk@nvidia.com>
Reviewed-by: Allen Martin <amartin@nvidia.com>

--- a/arch/arm/configs/tegra3_defconfig
+++ b/arch/arm/configs/tegra3_defconfig
@@ -32,6 +32,7 @@ CONFIG_MACH_CARDHU=y
 CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_CLOCK_DEBUG_WRITE=y
 CONFIG_TEGRA_MC_PROFILE=y
+CONFIG_USB_HOTPLUG=y
 CONFIG_ARM_ERRATA_743622=y
 CONFIG_ARM_ERRATA_751472=y
 CONFIG_ARM_ERRATA_752520=y
@@ -109,14 +110,12 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_INTERRUPT=y
 CONFIG_KEYBOARD_TEGRA=y
-CONFIG_INPUT_MOUSE=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_ALPS_GPIO_SCROLLWHEEL=y
-# CONFIG_SERIO is not set
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_TEGRA=y
@@ -144,7 +143,6 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
-CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES=y
