--- a/arch/arm/configs/tegra_whistler_android_defconfig
+++ b/arch/arm/configs/tegra_whistler_android_defconfig
@@ -267,6 +267,7 @@ CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_TEGRA_ALSA=y
 CONFIG_SND_SOC_WM8753=y
+#CONFIG_SND_SOC_TLV320AIC326X=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICEFS=y
