ARM: tegra[3]: config: Turn on GRHOST
By default Tegra graphics host driver is turned on. Before
resetting the default to off, all relevent defconfigs should
turn the kernel config option (CONFIG_TEGRA_GRHOST) on.

Bug 888777

Change-Id: I4bd1bf13a1ceb890692a5ba4effa0f457a4e2b77
Signed-off-by: Mursalin Akon <makon@nvidia.com>
Reviewed-on: http://git-master/r/57955
Reviewed-by: Varun Colbert <vcolbert@nvidia.com>
Tested-by: Varun Colbert <vcolbert@nvidia.com>

--- a/arch/arm/configs/tegra_p1852_gnu_linux_defconfig
+++ b/arch/arm/configs/tegra_p1852_gnu_linux_defconfig
@@ -141,6 +141,7 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
+CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
