--- a/arch/arm/configs/tegra_cardhu_mods_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_defconfig
@@ -89,6 +89,7 @@ CONFIG_REGULATOR_TPS6236X=y
 CONFIG_REGULATOR_GPIO_SWITCH=y
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
+CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
