--- a/arch/arm/configs/tegra_cardhu_mods_ldk_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_ldk_defconfig
@@ -111,6 +111,7 @@ CONFIG_VIDEO_DEV=y
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
+CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES=y
