--- a/arch/arm/configs/tegra_defconfig
+++ b/arch/arm/configs/tegra_defconfig
@@ -286,6 +286,7 @@ CONFIG_USB_VIDEO_CLASS=m
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
 CONFIG_FB_TILEBLITTING=y
+CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES=y
