--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -468,5 +468,6 @@ source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
 source "drivers/misc/iwmc3200top/Kconfig"
 source "drivers/misc/mpu3050/Kconfig"
+source "drivers/misc/tegra-baseband/Kconfig"
 
 endif # MISC_DEVICES
