--- a/arch/arm/configs/tegra3_defconfig
+++ b/arch/arm/configs/tegra3_defconfig
@@ -176,7 +176,8 @@ CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_TEGRA=y
 CONFIG_RTC_CLASS=y
-CONFIG_RTC_DRV_TEGRA=y
+# CONFIG_RTC_DRV_TEGRA is not set
+CONFIG_RTC_DRV_TPS6591x=y
 CONFIG_STAGING=y
 # CONFIG_STAGING_EXCLUDE_BUILD is not set
 CONFIG_IIO=y
