arm: tegra: Update minimal kernel config file for MODS.
Change-Id: I3f4f367d980b453d2f6ddbedd6c62ce2b51f6c32
Reviewed-on: http://git-master/r/60722
Tested-by: Chris Dragan <kdragan@nvidia.com>
Reviewed-by: Krishna Monian <kmonian@nvidia.com>
Reviewed-by: Yu-Huan Hsu <yhsu@nvidia.com>

--- a/arch/arm/configs/tegra_cardhu_mods_defconfig
+++ b/arch/arm/configs/tegra_cardhu_mods_defconfig
@@ -1,5 +1,4 @@
 CONFIG_EXPERIMENTAL=y
-CONFIG_CROSS_COMPILE="arm-eabi-"
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_IKCONFIG=y
@@ -43,11 +42,16 @@ CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="mem=448@2048M console=ttyS0,115200n8 earlyprintk init=/bin/ash"
 CONFIG_VFP=y
 CONFIG_NEON=y
 CONFIG_PM=y
 # CONFIG_SUSPEND is not set
+CONFIG_NET=y
+CONFIG_PACKET=y
+CONFIG_UNIX=y
+CONFIG_INET=y
+CONFIG_IPV6=y
+# CONFIG_ANDROID_PARANOID_NETWORK is not set
 # CONFIG_FIRMWARE_IN_KERNEL is not set
 CONFIG_MTD=y
 CONFIG_MTD_PARTITIONS=y
@@ -125,11 +129,20 @@ CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT4_FS=y
+CONFIG_REISERFS_FS=y
 # CONFIG_DNOTIFY is not set
+CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=y
+CONFIG_FSCACHE=y
+CONFIG_CACHEFILES=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-# CONFIG_MISC_FILESYSTEMS is not set
+CONFIG_SQUASHFS=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V3=y
+CONFIG_NFS_V4=y
+CONFIG_NFS_FSCACHE=y
+CONFIG_CIFS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 CONFIG_NLS_CODEPAGE_437=y
