arm: config: tegra[3]: Turn off PCI VGA arbitration
Not used in tegra. With it, the driver continously
spews on console.

Change-Id: I2e8623ef635b3aa11ddd317f7609dd5de35b7480
Signed-off-by: Mursalin Akon <makon@nvidia.com>
Reviewed-on: http://git-master/r/61354
Reviewed-by: Varun Colbert <vcolbert@nvidia.com>
Tested-by: Varun Colbert <vcolbert@nvidia.com>

--- a/arch/arm/configs/tegra3_defconfig
+++ b/arch/arm/configs/tegra3_defconfig
@@ -142,6 +142,7 @@ CONFIG_REGULATOR_TPS6236X=y
 CONFIG_REGULATOR_GPIO_SWITCH=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_DEV=y
+# CONFIG_VGA_ARB is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
 CONFIG_TEGRA_GRHOST=y
