--- a/arch/arm/configs/tegra_defconfig
+++ b/arch/arm/configs/tegra_defconfig
@@ -260,6 +260,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_TPS6586X=y
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_VIDEO_DEV=m
+# CONFIG_VGA_ARB is not set
 # CONFIG_VIDEO_ALLOW_V4L1 is not set
 # CONFIG_VIDEO_V4L1_COMPAT is not set
 # CONFIG_MEDIA_TUNER_SIMPLE is not set
