--- a/arch/arm/configs/tegra_enterprise_android_defconfig
+++ b/arch/arm/configs/tegra_enterprise_android_defconfig
@@ -33,6 +33,7 @@ CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_EMC_SCALING_ENABLE=y
 CONFIG_TEGRA_CLOCK_DEBUG_WRITE=y
 CONFIG_TEGRA_MC_PROFILE=y
+CONFIG_TEGRA_CONVSERVATIVE_GOV_ON_EARLYSUPSEND=y
 CONFIG_TEGRA_DYNAMIC_PWRDET=y
 CONFIG_TEGRA_USB_MODEM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER=y
